app/css/main.css
/* ... */
#collection .row {
    width: calc(100% - 55px);
    position: absolute;
    right: 10px;
}

#collection .row > div {
    padding: 0;
}

#collection .grid-item {
    padding: 0;
}

#collection .shadow {
    height: 75px;
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%);
    background-repeat: repeat-x;
}

#collection .titles {
    position: absolute;
    bottom: 5px;
    left: 12px;
    right: 12px;
    height: auto;
    margin: 0;
}

#collection .titles h4 {
    font-size: 11px;
    display: inline-block;
    height: auto;
    margin: 0 5px 5px 0;
}

#collection .titles h4 .sxe {
    background-color: #ed1c24;
    color: #fafafa;
    padding: 3px 5px;
}

#collection .titles h4 .eptitle {
    color: #ddd;
    background-color: rgba(0,0,0,0.4);
    padding: 3px 5px;
    padding-left: 6px;
}

#collection .titles h4 .unseen {
    color: #1d1d1d;
    background-color: rgba(255,200,0,1);
    font-weight: bold;
    padding: 3px 5px;
}

#collection .titles h3 {
    color: #fafafa;
    margin-top: 3px;
    text-shadow: 0 0 20px black;
    font-family: 'Proxima Nova Semibold';
    font-size: 18px;
    padding: 10px;
    background-color: rgba(0,0,0,0.4);
    display: inline-block;
}
#collection .titles h3 .year {
    font-weight: 200;
    font-size: 14px;
    color: #bbb;
    padding-left: 6px;
}

#collection .quick-icons {
    height: 40px;
    overflow: hidden;
    white-space: nowrap;
}

#collection .actions {
    float:left;
}

#collection .actions > div {
    height: 40px;
    width: 40px;
    font-size: 2.2em;
    text-align: center;
    vertical-align: middle;
    padding: 5px 0;
    transition: all .5s;
}

#collection .actions > div:hover,
#collection .metadata > div:hover {
    cursor: pointer;
}

#collection .actions .trailer {
    font-size: 1.8em;
    padding-top: 7px;
}

#collection .metadata {
    float: right;
    padding-right: 10px;
}

#collection .metadata .percentage {
    font-size: 20px;
    font-family: 'Proxima Nova Semibold';
    line-height: 40px;
}

#collection .metadata .fa-heart {
    color: #b11010;
    font-size: 16px;
    margin-right: 5px;
}
#collection .grid-item .data,
#collection #locals .data {
    display:none;
}

#collection .local-item {
    line-height: 60px;
    font-family: 'Proxima Nova Semibold';
}

#locals {
    display: none;
    color: #dfdfdf;
}

#locals .refreshing {
    display: none;
    position: fixed;
    bottom: 0;
    right: 0;
    padding: 5px 10px;
    background: rgba(11, 11, 11, 0.8);
}

#locals .local-item,
#locals .local-item .season,
#locals .local-item .episode {
    transition: all .3s;
}
#locals .local-item:hover,
#locals .local-item.active {
    cursor: pointer;
    color: #fafafa;
    background-color: #222;
}
#locals .local-item.active {
    background-color: #292929;
}
#locals .local-item .season {
    color: #dfdfdf;
    font-family: 'Proxima Nova';
}
#locals .local-item .season:hover,
#locals .local-item .season.active {
    background-color: #2f2f2f;
    color: #fafafa
}
#locals .local-item .season.active {
    background-color: #393939;
}
#locals .local-item .season {
    padding-left: 40px;
}

#locals .local-item .episode {
    margin-left: -40px;
    padding-left: 80px;
    color: #dfdfdf;
    font-family: 'Proxima Nova';
}
#locals .local-item .episode:hover {
    background-color: #3f3f3f;
    color: #fafafa
}

#locals .local-item .title {
    padding: 20px;
    font-size: 18px;
}

#locals .local-item .seasons,
#locals .local-item .episode {
    display: none;
}

#locals .categories {
    display: flex;
    width: calc(100% - 60px);
    right: 0;
    position: absolute;
}

#locals .category {
    margin: 0 auto;
    justify-content: center;
    display: none;
    text-align: center;
    font-size: 40px;
    height: 200px;
    padding: 30px 60px;
    line-height: 190px;
    margin-top: 150px;
    border: 1px dashed #aaa;
    color: #bfbfbf;
    border-radius: 40px;
    transition: all .5s;
    cursor: pointer;
}
#locals .category:hover {
    color: #fafafa;
    border-color: #888;
    background-color: #333
}
#locals .category .text {
    font-size: 18px;
    font-family: 'Proxima Nova';
    margin-top: 20px;
}

/* navbar */
#navbar {
    width: 60px;
    z-index: 2;
    height: 100%;
    position: fixed;
    transition: all .5s;
    overflow: hidden;
}

#navbar:hover {
    width: 150px;
}

#navbar .nav {
    width: 100%;
    height: 60px;
    padding: 20px;
    font-size: 20px;
    color: #ccc;
    cursor: pointer;
    transition: all .5s;
}
#navbar .nav:hover {
    color: #fafafa;
    background-color: #333;
}
#navbar .nav.active {
    color: #fafafa;
    background-color: #444;
}

#navbar .nav .text {
    font-size: 15px;
    top: -16px;
    position: relative;
    left: 40px;
    font-family: 'Proxima Nova';
}

#navbar .nav.settings {
    position: absolute;
    bottom: 0;
}

/* collection END */

/* trailer popup */
#trailer {
    width: 100vw;
    position: fixed;
    height: 100%;
    background: rgba(11,11,11,0.8);
    z-index: 998;
    transition: all .5s;
}

#trailer .video {
    margin: 0 auto;
    width: 640px;
    position: absolute;
    margin: 95px calc(50% - 320px);
}

#trailer .spinner {
    position: absolute;
    margin: 200px calc(50% - 20px);
}

/* Settings */
#settings {
    position: absolute;
    right: 0px;
    width: calc(100% - 60px);
    height: 100vh;
}

#settings .setting {
    width: 50%;
    border-bottom: 1px solid #2f2f2f;
    margin: 20px auto;
}

#settings .title {
    font-size: 18px;
    margin-left: -150px;
    max-width: 150px;
    padding-right: 10px;
    line-height: 20px;
    padding-top: 20px;
    vertical-align: middle;
    position: absolute;
    font-family: 'Proxima Nova Semibold';
}

#settings .option {
    height: 60px;
}

#settings .text {
    display: inline;
    line-height: 60px;
    float: left;
    color: #efefef;
}
/* ... */

